# NeuroMatch_2026_Behaviour

./: .gitignore  Data_Preperation_Notebook_.ipynb  README.md  abstract_draft.md  collaborator_guide.md  data_preparation_and_hb_model.ipynb  data_preparation_and_hb_model_1.ipynb  data_preparation_and_hb_model_3.ipynb  gpt_conversation_markdown.md  hb_parameter_recovery_smoke.ipynb  hierarchical_observer_scaffold.ipynb  model_variable_verification.md  notebook_cell_map.md  project_abstract.md  scaffold_design_guide.md  scaffold_recent_changes.md  tasks_draft.md
hierarchical/: .gitignore  README.md  fitting_cv_methods_review.md  fitting_cv_validation_procedure.md  pyproject.toml  requirements.txt
hierarchical/docs/: ADDING_A_NEW_MODEL.md  HIERARCHICAL_ONLINE_NOTES.md  REPO_GUIDE_FOR_LLMS.md  RESULTS_LAYOUT.md  RUNNING_VERIFICATIONS.md  SWITCH_MODEL_CV_ISSUE.md  TEAM_START_HERE.md  project_abstract.md
hierarchical/docs/anirban-modelling-scaffold/: Hypotheses_critique_and_alternatives.md  Hypotheses_critique_and_alternatives.md.docx  Model_explainer.md  Switching_Bayesian_Observer_starter.ipynb
hierarchical/experiments/: README.md
hierarchical/experiments/02_abstract_drafts/: hb_rachel_abstract.md
hierarchical/experiments/03_model_equations/: generative-model.md
hierarchical/experiments/rachel/: README.md
hierarchical/notebooks/: 00_start_here.ipynb  01_explore_data.ipynb  02_model_comparison.ipynb  03_validate_models.ipynb  03_validate_models_solutions.ipynb  04_switching_matches_paper.ipynb
hierarchical/observers/: __init__.py  api.py
hierarchical/reference/: README.md
hierarchical/results/: refit_parity_delta_report.txt
(+575 files in other folders)
