[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "observers"
version = "0.1.0"
description = "Observer models of prior-guided motion-direction estimation (NeuroMatch 2026, Behaviour & Theory)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.16",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[tool.setuptools.packages.find]
include = ["observers*"]
